# green-lab

./: .gitignore  README.md
config/mem-cpu/: fifth_run.json  first_run.json  fourth_run.json  second_run.json  sixth_run.json  third_run.json
config/trepn/: fifth_run.json  first_run.json  fourth_run.json  second_run.json  sixth_run.json  third_run.json
data/aggregated/: energy_consumption_data.csv  execution_time_data.csv  memcpu_data.csv
scripts/analysis/: cpu_analysis.R  energy_consumption_analysis.R  execution_time_analysis.R  memory_analysis.R
scripts/transformation/: data_transformation_energy_consumption.R  data_transformation_execution_time.R  data_transformation_mem_cpu.R
sources/c/: binary-trees.c  fannkuch-redux.c  fasta.c  mandelbrot.c  n-body.c  spectral-norm.c
sources/cpp/: binary-trees.cpp  fannkuch-redux.cpp  fasta.cpp  mandelbrot.cpp  n-body.cpp  spectral-norm.cpp
sources/go/: binary-trees.go  mandelbrot.go
sources/rust/spectral-norm/: Cargo.toml
sources/rust/spectral-norm/src/: lib.rs
subjects/c/: binary-trees.html  binary-trees.js  binary-trees.wasm  fannkuch-redux.html  fannkuch-redux.wasm  fasta.html  fasta.js  fasta.wasm  mandelbrot.html  mandelbrot.js  mandelbrot.wasm  n-body.html  n-body.js  n-body.wasm  spectral-norm.html  spectral-norm.js  spectral-norm.wasm
subjects/cpp/: binary-trees.html  binary-trees.js  binary-trees.wasm  fannkuch-redux.html  fannkuch-redux.js  fannkuch-redux.wasm  fasta.html  fasta.js  fasta.wasm  mandelbrot.html  mandelbrot.js  mandelbrot.wasm  n-body.html  n-body.wasm  spectral-norm.html  (+2 more)
(+1089 files in other folders)
