[package]
name = "spectral-norm"
version = "0.1.0"
authors = ["Mohammad Rijal <mohammad.rijal13@gmail.com>"]
description = "Spectral Norm of Wasm Pack"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1.7"

